# tekken-8-bosses

./: .gitignore  CMakeLists.txt  addresses.txt  addresslog.txt  bosses.h  camera.cpp  camera_gui.cpp  compile.bat  dump.cpp  game.h  gui.cpp  gui.py  instructions.txt  item_id_enc_dec.cpp  main.cpp  main2.cpp  movelist.md  moveset.h  mydll.cpp  pattern.cpp  raw.cpp  resource.res  run.bat  tekken.h  utils.h
src/: DllMain.cpp  InjectedGameClass.h  Injector.cpp
